# crimsoBOT

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.rst  bot.py  cli.py  config.example.py  mypy.ini  pyproject.toml  requirements.txt  test.py
.github/: FUNDING.yml
.github/workflows/: codeql.yaml  deploy.yaml  lint.yaml  main.yaml
crimsobot/: bot.py  context.py  db.py  exceptions.py  help_command.py
crimsobot/cogs/: admin.py  chat.py  cringo.py  games.py  image.py  mystery.py  reactions.py  secret.py  text.py  utilities.py
crimsobot/data/games/: __init__.py  emojilist.txt  five-letter-words.txt  madlibs.txt  madlibs.yaml  rules.yaml  wordle_guesses.txt
crimsobot/data/img/: __init__.py  bless.txt  colors.json  colors.txt  colors_emojis.json  rules.yaml
crimsobot/data/tarot/: __init__.py  deck.json  deck.yaml  suits.yaml
crimsobot/data/text/: .gitignore  emojidigits.txt  emojiface2.txt  emojiregex.txt  others.txt  randoms.txt  wisdom.txt
crimsobot/extensions/: presence.py  reminder.py
crimsobot/handlers/: __init__.py  games.py
crimsobot/models/: __init__.py  ban.py  cringo_statistic.py  currency_account.py  fun_fact.py  fun_facts.py  guess_statistic.py  user.py  wordle_results.py
crimsobot/utils/: astronomy.py  checks.py  color.py  converters.py  cringo.py  cringo_leaderboard.py  fact_leaderboard.py  games.py  guess_leaderboard.py  image.py  image2.py  leaderboard.py  markov.py  tarot.py  text.py  tools.py  wordle.py
modules/: Admin.py  Chat.py  Games.py  Image.py  Mystery.py  Text.py  Toybox.py  Utilities.py
modules/clib/: __init__.py  astronomy.py  crimsogames.py  crimsotarot.py  crimsotools.py  imagetools.py  markovtools.py  mosaic.py  texttools.py
modules/clib/games/: emojilist.txt
modules/clib/img/: .gitignore  emoji.txt  emoji0.txt
modules/clib/tarot/: .gitignore
modules/clib/text/: all.txt  bottoface.txt  crimsoball_answers.txt  emojiface.txt  reminders.txt  rovin.txt  verpingt.txt
