[tool.poetry]
name = "crimsobot"
version = "0.0.0"
description = "A playful little Discord bot."
license = "MIT"
authors = ["Andrew <48505803@users.noreply.github.com>", "William McKinnerney <me@williammck.net>"]
readme = "README.rst"
homepage = "https://crimso.bot"
repository = "https://github.com/crimsobot/crimsoBOT"

[tool.poetry.dependencies]
aiofiles = "^0.7.0"
aiomysql = "^0.0.22"
aiosqlite = "^0.16.0"
click = "^8.0.3"
colormath = "^3.0.0"
"discord.py" = "^1.5.0"
"discord-ext-menus" = { git = "https://github.com/Rapptz/discord-ext-menus.git", branch = "master" }
geopy = "^2.0.0"
lxml = "^4.4.1"
markovify = "^0.9.3"
matplotlib = "^3.1.1"
numpy = "^1.17.4"
Pillow = "^8.4.0"
pyshorteners = "^1.0.1"
python = ">=3.7.0,<3.10"
PyYAML = "^6.0"
requests = "^2.22.0"
scipy = "^1.3.2"
tortoise-orm = "0.16.13"
pendulum = "^2.1.2"
tabulate = "^0.8.7"
timezonefinder = "^5.2.0"

[tool.poetry.dev-dependencies]
bandit = "^1.6.2"
flake8 = "^4.0.1"
flake8-import-order = "^0.18.1"
flake8-bugbear = "*"
flake8-builtins = "^1.4.1"
flake8-quotes = "^3.2.0"
mccabe = "^0.6.1"
mypy = "^0.910"
pep8-naming = "^0.12.1"
pre-commit = "^2.6.0"
types-PyYAML = "^6.0.1"
types-tabulate = "^0.8.3"
types-aiofiles = "^0.7.0"

[tool.poetry.scripts]
bot = "cli:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
